<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/episodes_filter_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:background="@drawable/app_rectangle_button"
        android:contentDescription="@string/button_back"
        app:srcCompat="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/episodes_filter_header_text_view"
        android:layout_width="343dp"
        android:layout_height="29dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/filter_episodes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/episodes_filter_back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/episodes_filter_name_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_base_margin"
        android:text="@string/name"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/episodes_filter_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/episodes_filter_name_edit_text" />

    <EditText
        android:id="@+id/episodes_filter_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_episode_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episodes_filter_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/episodes_filter_back_button" />

    <TextView
        android:id="@+id/episodes_filter_code_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_base_margin"
        android:text="@string/code"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/episodes_filter_code_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/episodes_filter_code_edit_text" />

    <EditText
        android:id="@+id/episodes_filter_code_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_episode_code"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episodes_filter_code_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/episodes_filter_name_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/episodes_filter_apply_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/app_rectangle_button"
        android:minHeight="0dp"
        android:paddingVertical="@dimen/app_base_padding"
        android:text="@string/apply_filters"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
