<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/episode_details_back_image_button"
        android:layout_marginStart="@dimen/app_base_margin"
        android:background="@drawable/oval_button"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/episode_details_guideline_header"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/episode_details_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintBottom_toTopOf="@id/episode_details_guideline_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@id/episode_details_back_image_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/episode_details_guideline_header"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/episode_details_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/app_green_light"
        android:indeterminateTintMode="src_in"
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/episode_details_guideline_header"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/episode_details_error_text_view"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:text="@string/fail_to_download_data_please_try_again"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/episode_details_button_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_base_margin"
        android:background="@drawable/app_rectangle_button"
        android:minHeight="0dp"
        android:paddingHorizontal="@dimen/app_base_padding"
        android:paddingVertical="@dimen/app_base_padding"
        android:text="@string/reload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/app_base_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_error_text_view" />

   <androidx.constraintlayout.widget.Group
       android:id="@+id/content_views_group"
       android:visibility="visible"
       app:constraint_referenced_ids="episode_details_air_date_label, episode_details_air_date_text, episode_details_code_label, episode_details_code_text, episode_details_characters_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

   </androidx.constraintlayout.widget.Group>

    <TextView
        android:id="@+id/episode_details_air_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:text="@string/air_date"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_progress_bar" />

    <TextView
        android:id="@+id/episode_details_air_date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episode_details_air_date_label"
        app:layout_constraintTop_toBottomOf="@id/episode_details_progress_bar" />

    <TextView
        android:id="@+id/episode_details_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:text="@string/code_details"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_air_date_text" />

    <TextView
        android:id="@+id/episode_details_code_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/episode_details_code_label"
        app:layout_constraintTop_toBottomOf="@id/episode_details_air_date_text"
        tools:text="S03E07" />

    <TextView
        android:id="@+id/episode_details_characters_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_base_margin"
        android:layout_marginTop="@dimen/app_base_margin"
        android:text="@string/characters"
        android:textSize="@dimen/app_base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_code_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episode_details_recycler_characters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/app_base_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/episode_details_characters_label"
        tools:listitem="@layout/item_character" />

</androidx.constraintlayout.widget.ConstraintLayout>
